apps/capacitor-next/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-next
  namespace: capacitor-next
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web
      namespace: infra
      sectionName: web-gw
  hostnames:
    - "capacitor.alixroden.co.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          namespace: flux-system
          port: 9000
